# pytorch_pruning

./: README.md  model_export.py  train.py
dataset/: __init__.py  cifar100_dataset.py
inference/: CMakeLists.txt  inference.cpp  logging.cpp  main.cpp
inference/include/: allocator.h  buffer.h  common.h  inference.h  logging.h
model/: __init__.py  dense.py  resnet.py  test_dense.py  test_resnet.py  test_vgg.py  vgg.py
model/.pytest_cache/v/cache/: lastfailed  nodeids
